#!/usr/bin/env python3
# -*- coding: utf-8 -*-
"""
æ·»åŠ æ‰¹æ¬¡37åˆ°æ•°æ®åº“
"""

import sys
from pathlib import Path

# æ·»åŠ é¡¹ç›®æ ¹ç›®å½•åˆ°Pythonè·¯å¾„
project_root = Path(__file__).parent.parent.parent.parent
sys.path.insert(0, str(project_root / 'devdoc' / 'protobuf' / 'reports' / 'scripts'))

from core.migration_tracker import MigrationTracker, Batch, MigrationFile

def add_batch_37():
    """æ·»åŠ æ‰¹æ¬¡37åˆ°æ•°æ®åº“"""
    with MigrationTracker() as tracker:
        # æ£€æŸ¥æ‰¹æ¬¡æ˜¯å¦å·²å­˜åœ¨
        existing = tracker.get_batch_by_name("batch_37")
        if existing:
            print(f"âš ï¸  æ‰¹æ¬¡ batch_37 å·²å­˜åœ¨ï¼Œå°†æ›´æ–°å…¶çŠ¶æ€")
            tracker.update_batch(existing.id, status="completed")
            print(f"âœ… æ‰¹æ¬¡ batch_37 çŠ¶æ€å·²æ›´æ–°ä¸º completed")
            return

        # åˆ›å»ºæ‰¹æ¬¡37
        batch = Batch(
            id=None,
            batch_name="batch_37",
            batch_number=37,
            description="å©šç¤¼ç³»ç»Ÿã€ä¸–ç•Œçªè¢­ç³»ç»Ÿã€è§‚çœ‹ä¹¦ç­¾ç³»ç»Ÿã€éªŒè¯ç³»ç»Ÿ",
            status="completed",
            priority=5,
            total_files=12,
            migrated_files=12,
            start_date="2026-02-10",
            planned_end_date=None,
            actual_end_date="2026-02-10",
            blocker=None,
            notes="åŒ…å«å©šç¤¼ã€ä¸–ç•Œçªè¢­ã€è§‚çœ‹ä¹¦ç­¾å’ŒéªŒè¯ç³»ç»Ÿçš„æ¶ˆæ¯å®šä¹‰",
            created_at=None,
            updated_at=None
        )

        batch_id = tracker.create_batch(batch)
        print(f"âœ… æ‰¹æ¬¡ batch_37 å·²åˆ›å»ºï¼ŒID: {batch_id}")

        # æ·»åŠ æ–‡ä»¶
        files = [
            # å©šç¤¼ç³»ç»Ÿ
            ("PT_WEDDING_GUESTBOOK", "WeddingGuestbook", None, "social_events.proto", "batch37_test.go"),
            ("PT_WEDDING_INVITATION", "WeddingInvitation", None, "social_events.proto", "batch37_test.go"),
            ("PT_WEDDING_ATTENDANCE", "WeddingAttendance", None, "social_events.proto", "batch37_test.go"),
            ("PT_WEDDING_THEME", "WeddingTheme", None, "social_events.proto", "batch37_test.go"),
            ("PT_WEDDING_THEME_CEREMONY", "WeddingThemeCeremony", None, "social_events.proto", "batch37_test.go"),
            ("PT_WEDDING_PREPARATION", "WeddingPreparation", None, "social_events.proto", "batch37_test.go"),
            ("PT_WEDDING_MONEYGIFT_RANKING", "WeddingMoneygiftRanking", None, "social_events.proto", "batch37_test.go"),
            # ä¸–ç•Œçªè¢­ç³»ç»Ÿ
            ("PT_WORLD_RAID_INFO", "WorldRaidInfo", None, "social_events.proto", "batch37_test.go"),
            ("PT_WORLD_RAID_RANKING", "WorldRaidRanking", None, "social_events.proto", "batch37_test.go"),
            # è§‚çœ‹ä¹¦ç­¾ç³»ç»Ÿ
            ("PT_WATCHING_BOOKMARK", "WatchingBookmark", None, "social_events.proto", "batch37_test.go"),
            # éªŒè¯ç³»ç»Ÿ
            ("PT_VERIFICATION", "Verification", None, "social_events.proto", "batch37_test.go"),
            ("PT_VERIFICATION_ADD_DAMAGE_DATA", "VerificationAddDamageData", None, "social_events.proto", "batch37_test.go"),
        ]

        for file_name, module_name, module_id, proto_file, test_file in files:
            file = MigrationFile(
                id=None,
                batch_id=batch_id,
                file_name=file_name,
                module_name=module_name,
                module_id=module_id,
                status="completed",
                priority=5,
                proto_file=proto_file,
                java_file=None,
                has_test=True,
                test_passed=True,
                issues_count=0,
                migration_notes=None,
                start_date="2026-02-10",
                completion_date="2026-02-10",
                created_at=None,
                updated_at=None
            )
            tracker.create_file(file)
            print(f"âœ… æ–‡ä»¶ {file_name} å·²æ·»åŠ ")

        print(f"\nğŸ“¦ æ‰¹æ¬¡37æ·»åŠ å®Œæˆï¼Œå…± {len(files)} ä¸ªæ–‡ä»¶")

if __name__ == "__main__":
    add_batch_37()
